--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
     <link rel="dns-prefetch" href="http://fonts.googleapis.com/">
     <link rel="dns-prefetch" href="https://www.facebook.com/">
 
-
+    <link href='/static/css' rel='stylesheet' type='text/css'>
 </head>
 <body class="@themeOptionText">
     <div id="header" class="header">
