--- a/10_Theme_09_v2/Views/Product/Checkout.cshtml
+++ b/10_Theme_09_v2/Views/Product/Checkout.cshtml
@@ -140,8 +140,8 @@
                     </div>
                     <div class="page-content checkout-page" id="cartContent2" style="display:none;"></div>
                     <div id='ajax_loader' style="position: fixed; left: 45%; top: 50%; display: none;">
-                        <img src="/assets/images/loading.gif" />
-                    </div>
+                        <img src="http://media.anpero.com/images/38/102017/loading2017102517124312.gif" />
+                    </div>        
                 </div>
             </div>
         </div>
