--- a/10_Theme_09_v2/Views/Home/Index.cshtml
+++ b/10_Theme_09_v2/Views/Home/Index.cshtml
@@ -227,6 +227,30 @@
                             </div>
                         }
                     }
+                    else
+                    {
+                        <div class="item">
+                            <a href="http://media.anpero.com/images/38/52018/12018051519591544.jpg" target="_blank"><img src="http://media.anpero.com/images/38/52018/12018051519591544.jpg" alt="ads1"></a>
+                        </div>
+                        <div class="item">
+                            <a href="http://media.anpero.com/images/38/52018/22018051520060323.jpg" target="_blank"><img src="http://media.anpero.com/images/38/52018/22018051520060323.jpg" alt="ads1"></a>
+                        </div>
+                        <div class="item">
+                            <a href="http://media.anpero.com/images/38/52018/22018051520060323.jpg" target="_blank"><img src="http://media.anpero.com/images/38/52018/22018051520060323.jpg" alt="ads1"></a>
+                        </div>
+                    }
+                }
+                else
+                {
+                    <div class="item">
+                        <a href="http://media.anpero.com/images/38/52018/12018051519591544.jpg" target="_blank"><img src="http://media.anpero.com/images/38/52018/12018051519591544.jpg" alt="ads1"></a>
+                    </div>
+                    <div class="item">
+                        <a href="http://media.anpero.com/images/38/52018/22018051520021518.jpg" target="_blank"><img src="http://media.anpero.com/images/38/52018/22018051520021518.jpg" alt="ads1"></a>
+                    </div>
+                    <div class="item">
+                        <a href="http://media.anpero.com/images/38/52018/22018051520021518.jpg" target="_blank"><img src="http://media.anpero.com/images/38/52018/22018051520021518.jpg" alt="ads1"></a>
+                    </div>
                 }
             </div>
         </div>
