--- a/10_Theme_09_v2/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/10_Theme_09_v2/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -12,16 +12,18 @@
             <div class="container">
                 <div class="row">
                     <div class="top-fix hearder-fix-t">
-                        <div style="float:left;"> HotLine : <a href="tel:@commonInfo.HotLine" aria-label="Call to hotline"> @Anpero.StringHelpper.FormatPhoneNumber(commonInfo.HotLine)</a> 
-                        @if (!Request.Browser.IsMobileDevice)
-                        {
-                             if(!string.IsNullOrEmpty(commonInfo.Email)){<a href="mailto:@commonInfo.Email">| Email: @commonInfo.Email |</a> } <a href="/home/contact">HỖ TRỢ</a>
-                        } 
+                        <div style="float:left;">
+                            HotLine : <a href="tel:@commonInfo.HotLine" aria-label="Call to hotline"> @Anpero.StringHelpper.FormatPhoneNumber(commonInfo.HotLine)</a>
+                            @if (!Request.Browser.IsMobileDevice)
+                            {
+                                if (!string.IsNullOrEmpty(commonInfo.Email))
+                                {<a href="mailto:@commonInfo.Email">| Email: @commonInfo.Email |</a> } <a href="/home/contact">HỖ TRỢ</a>
+                            }
                         </div>
                         <div class="fl-cart-contain">
                             <div class="mini-cart">
                                 <div class="basket"> <a href="/product/checkout"><span class="spN">0</span></a> </div>
-                            
+
                             </div>
                         </div>
                     </div>
@@ -34,15 +36,19 @@
                     <img src="@commonInfo.Logo" alt="@commonInfo.Name">
                 </a>
             </div>
-            <div class="logo">
-                <div class="hotline-top right">
-                    <i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>HOTLINE:
-                    <span class="hotline">
-                        <a href="tel:0962825528">0962.825.528</a> - <a href="tel:0963269998">0963.269.998</a> - <a href="tel:0948269998">0948.269.998</a> - <a href="tel:02466803331"> 02466.803.331</a>
-</span>
+            @if (!string.IsNullOrEmpty(commonInfo.OtherPhone))
+            {
+                <div class="logo">
+                    <div class="hotline-top right">
+                        <i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>HOTLINE:
+                        <span class="hotline">
+                            @Html.Raw(commonInfo.OtherPhone)
+                        </span>
+                    </div>
                 </div>
-            </div>
-            
+            }
+
+
             <div class="row">
                 <div class="fl-header-right">
                     <div class="collapse navbar-collapse">
@@ -60,114 +66,114 @@
         </div>
         <div id="fl-nav-menu">
             <div class="container">
-                    <div class="fl-nav-menu">
-                        <nav>
-                            <div class="mm-toggle-wrap">
-                                <div class="mm-toggle"><i class="icon-align-justify"></i><span class="mm-label">Menu</span> </div>
-                            </div>
-                            <div class="nav-inner">
-                                <ul id="nav" class="hidden-xs">
-                                    <li class="level0 parent drop-menu"><a class="level-top" href="/"><span>Trang chủ</span></a></li>
-                                    <li class="level0 parent drop-menu">
-                                        <a class="level-top" href="/search?category=0&keyword="><span>Sản phẩm</span></a>
-                                        <ul class="level1">
-                                            @foreach (var item in commonInfo.ProductCategoryList)
-                                            {
+                <div class="fl-nav-menu">
+                    <nav>
+                        <div class="mm-toggle-wrap">
+                            <div class="mm-toggle"><i class="icon-align-justify"></i><span class="mm-label">Menu</span> </div>
+                        </div>
+                        <div class="nav-inner">
+                            <ul id="nav" class="hidden-xs">
+                                <li class="level0 parent drop-menu"><a class="level-top" href="/"><span>Trang chủ</span></a></li>
+                                <li class="level0 parent drop-menu">
+                                    <a class="level-top" href="/search?category=0&keyword="><span>Sản phẩm</span></a>
+                                    <ul class="level1">
+                                        @foreach (var item in commonInfo.ProductCategoryList)
+                                        {
                                             <li class="level1">
-                                                <a title="rollback" href="@Anpero.StringHelpper.GetCategoryLink(item.Name,item.Id)">
+                                                <a title="rollback" href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)">
                                                     <span>@item.Name</span>
                                                 </a>
                                                 @if (item.ChildCategory != null && item.ChildCategory.Length != 0)
-                                                    {
+                                                {
                                                     <ul class="level2">
                                                         @foreach (var chidItem in item.ChildCategory)
-                                                            {
+                                                        {
                                                             <li class="level2"><a href="@Anpero.StringHelpper.GetCategoryLink(chidItem.Name, chidItem.Id)"><span>@chidItem.Name</span></a></li>
-                                                            }
+                                                        }
                                                     </ul>
-                                                    }
+                                                }
                                             </li>
+                                        }
+                                    </ul>
+                                </li>
+
+                                @if (commonInfo.ProductGroupList != null && commonInfo.ProductGroupList.Length > 0)
+                                {
+                                    <li class="level0 parent drop-menu">
+                                        <a class="level-top" href="/search?category=0&keyword="><span>Thương hiệu</span></a>
+                                        <ul class="level1">
+                                            @foreach (var item in commonInfo.ProductGroupList)
+                                            {
+                                                <li class="level1">
+                                                    <a title="rollback" href="@Anpero.StringHelpper.GetProductGroupLink(item.Name, item.Id)">
+                                                        <span>@item.Name</span>
+                                                    </a>
+                                                </li>
                                             }
                                         </ul>
                                     </li>
-
-                                    @if (commonInfo.ProductGroupList != null && commonInfo.ProductGroupList.Length > 0)
-                                    {
-                                        <li class="level0 parent drop-menu">
-                                            <a class="level-top" href="/search?category=0&keyword="><span>Thương hiệu</span></a>
-                                            <ul class="level1">
-                                                @foreach (var item in commonInfo.ProductGroupList)
+                                }
+                                <li class="fl-custom-tabmenulink mega-menu">
+                                    <a href="#" class="level-top"> <span>Khuyến mại</span> </a>
+                                    <div class="level0-wrapper fl-custom-tabmenu" style="left: 0px; display: none;">
+                                        <div class="container">
+                                            <div class="header-nav-dropdown-wrapper clearer">
+                                                @if (ViewData["saleProduct"] != null)
                                                 {
-                                                    <li class="level1">
-                                                        <a title="rollback" href="@Anpero.StringHelpper.GetProductGroupLink(item.Name, item.Id)">
-                                                            <span>@item.Name</span>
-                                                        </a>
-                                                    </li>
-                                                }
-                                            </ul>
-                                        </li>
-                                    }
-                                    <li class="fl-custom-tabmenulink mega-menu">
-                                        <a href="#" class="level-top"> <span>Khuyến mại</span> </a>
-                                        <div class="level0-wrapper fl-custom-tabmenu" style="left: 0px; display: none;">
-                                            <div class="container">
-                                                <div class="header-nav-dropdown-wrapper clearer">
-                                                    @if (ViewData["saleProduct"] != null)
+                                                    AnperoFrontend.WebService.ProductItem[] saleProduct = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
+                                                    if (saleProduct != null && saleProduct.Length > 0)
                                                     {
-                                                        AnperoFrontend.WebService.ProductItem[] saleProduct = (AnperoFrontend.WebService.ProductItem[])ViewData["saleProduct"];
-                                                        if (saleProduct != null && saleProduct.Length > 0)
+                                                        for (int i = 0; i < saleProduct.Length; i++)
                                                         {
-                                                            for (int i = 0; i < saleProduct.Length; i++)
+                                                            if (i < 4)
                                                             {
-                                                                if (i < 4)
-                                                                {
-                                                                    int itemPecentDow = Convert.ToInt32((saleProduct[i].Price - saleProduct[i].SalePrice) / saleProduct[i].Price * 100);
-                                                                    <div class="grid12-3">
-                                                                        <div>
-                                                                            <a href="@Anpero.StringHelpper.GetProductLink(saleProduct[i].PrName, saleProduct[i].Id)" title="@saleProduct[i].PrName">
-                                                                                <img src="@saleProduct[i].Images" alt="@saleProduct[i].PrName">
-                                                                            </a>
-                                                                        </div>
-                                                                        <h4 class="heading">Giảm giá @itemPecentDow.ToString()%</h4>
-                                                                        <p>@Anpero.StringHelpper.SubString(61, saleProduct[i].ShortDesc)</p>
+                                                                int itemPecentDow = Convert.ToInt32((saleProduct[i].Price - saleProduct[i].SalePrice) / saleProduct[i].Price * 100);
+                                                                <div class="grid12-3">
+                                                                    <div>
+                                                                        <a href="@Anpero.StringHelpper.GetProductLink(saleProduct[i].PrName, saleProduct[i].Id)" title="@saleProduct[i].PrName">
+                                                                            <img src="@saleProduct[i].Images" alt="@saleProduct[i].PrName">
+                                                                        </a>
                                                                     </div>
-                                                                }
+                                                                    <h4 class="heading">Giảm giá @itemPecentDow.ToString()%</h4>
+                                                                    <p>@Anpero.StringHelpper.SubString(61, saleProduct[i].ShortDesc)</p>
+                                                                </div>
                                                             }
                                                         }
                                                     }
-                                                </div>
+                                                }
                                             </div>
                                         </div>
-                                    </li>
-                                    <li class="level0 parent"><a href="/about" aria-label="Về chúng tôi"><span>Về chúng tôi</span></a></li>
-                                    <li class="level0 parent"><a href="/home/contact" aria-label="Liên hệ"><span>Liên hệ</span></a></li>
-                                    
-                                        <li class="level0 parent drop-menu">
-                                        <a href="/blog"><span>Tin tức</span> </a>
-                                        <ul class="level1">
-                                            <li class="level1"><a title="blog" href="/blog"><span>Blogs Tin tức</span></a></li>
-                                            <li class="level1">
-                                                <a title="shipper" href="/shippolicy">
-                                                    <span>Vận chuyển</span>
-                                                </a>
-                                            </li>
-                                            <li class="level1">
-                                                <a title="rollback" href="/ProductReturnPolicy">
-                                                    <span>Chính sách đổi trả</span>
-                                                </a>
-                                            </li>
-                                            <li class="level1">
-                                                <a title="pay" href="/PaymentInfo">
-                                                    <span>Hướng dẫn thanh toán</span>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </li>
+                                    </div>
+                                </li>
+                                <li class="level0 parent"><a href="/about" aria-label="Về chúng tôi"><span>Về chúng tôi</span></a></li>
+                                <li class="level0 parent"><a href="/home/contact" aria-label="Liên hệ"><span>Liên hệ</span></a></li>
 
-                                </ul>
-                            </div>
-                        </nav>
-                    </div>
+                                <li class="level0 parent drop-menu">
+                                    <a href="/blog"><span>Tin tức</span> </a>
+                                    <ul class="level1">
+                                        <li class="level1"><a title="blog" href="/blog"><span>Blogs Tin tức</span></a></li>
+                                        <li class="level1">
+                                            <a title="shipper" href="/shippolicy">
+                                                <span>Vận chuyển</span>
+                                            </a>
+                                        </li>
+                                        <li class="level1">
+                                            <a title="rollback" href="/ProductReturnPolicy">
+                                                <span>Chính sách đổi trả</span>
+                                            </a>
+                                        </li>
+                                        <li class="level1">
+                                            <a title="pay" href="/PaymentInfo">
+                                                <span>Hướng dẫn thanh toán</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
             </div>
         </div>
     </div>
