--- a/04_Shop_multiProduct/assets/css/option6.css
+++ b/04_Shop_multiProduct/assets/css/option6.css
@@ -86,22 +86,22 @@
 /*
 [3. Products list]
 */
-.option6 .product-list li .quick-view{
+.product-list li .quick-view{
 	right: 10px;
 }
-.option6 .product-list li .quick-view a:hover{
+.product-list li .quick-view a:hover{
 	background: #007176;
 }
-.option6 .product-list li .quick-view a:hover{
+.product-list li .quick-view a:hover{
 	background: #007176;
 }
-.option6 .product-list li .quick-view a:hover {
+.product-list li .quick-view a:hover {
 	background: #007176;
 }
-.option6 .product-list li .add-to-cart:hover{
+.product-list li .add-to-cart:hover{
 	background: #007176;
 }
-.option6 .product-list li .product-price {
+.product-list li .product-price {
 	color: #f96d10;
 }
 
@@ -109,7 +109,7 @@
 /*
 [4. Header ]
 */
-.option6 .header{
+.header{
 	background:rgba(43, 23, 13, 0.8);
     background-image: url(/assets/images/headerBg.jpg);
     background-size: cover;
@@ -124,7 +124,7 @@
 .option6 .top-header a.current-open:after{
 	font-size: 13px;
 }
-.option6 .top-header{
+.top-header{
 	/*background: rgba(43, 23, 13, 0.8);*/
 	font-size: 12px;
 	color: #fff;
@@ -158,7 +158,7 @@
 	padding: 0 15px;
 	padding-left: 40px;
 }
-.option6 .main-header .header-search-box .form-inline .form-category{
+.main-header .header-search-box .form-inline .form-category{
     float: right;
     margin-right: 40px;
     border-left: 1px solid #21940c;
@@ -180,7 +180,7 @@
 .option6 .header-search-box form .input-serach input::-webkit-input-placeholder { color:#fff;  }
 .option6 .header-search-box form .input-serach input::-webkit-input-placeholder { color:#fff; }
 
-.option6 .main-header .header-search-box .form-inline .btn-search{
+.main-header .header-search-box .form-inline .btn-search{
 	color: #fff;
 	font-size: 16px;
 	background-color:rgba(43, 23, 13, 0.8);
@@ -192,7 +192,7 @@
 	border-color: #fff transparent transparent transparent;
    
 }
-.option6 .main-header .header-search-box .form-inline{
+.main-header .header-search-box .form-inline{
 	border: none;
 	color: #fff;
 	display: inline-block;
@@ -235,7 +235,7 @@
 	background: url("/assets/images/icon-compare-round6.png") no-repeat center center;
 }
 
-.option6 .nav-top-menu.nav-ontop{
+.nav-top-menu.nav-ontop{
 	background:#008000bf;
 	height: 51px;
 }
@@ -250,7 +250,7 @@
 	padding: 0;
 }
 
-.option6 #main-menu .navbar{
+#main-menu .navbar{
 	border-radius: 0;
 	background: #008000bf;
 }
