--- a/04_Shop_multiProduct/Views/Home/Index.cshtml
+++ b/04_Shop_multiProduct/Views/Home/Index.cshtml
@@ -10,7 +10,6 @@
 @section health{
     <meta name="description" content="@commonInfo.Desc" />
     <meta name="keywords" content="@commonInfo.Desc" />
-    
 }
 <div class="container">
     <div class="lct">
@@ -273,7 +272,7 @@
             if (slide.Length > 0)
             {
                 <div class="row">
-                    <div class="row banner-bottom">
+                    <div class="row banner-bottom" id="AdsSlide2">
                     @for (int i = 0; i < slide.Length; i++)
                     {
                         if (i == 0)
@@ -299,7 +298,7 @@
             else
             {
 
-                @*<div class="row">
+                <div class="row">
                     <div class="row banner-bottom">
                         <div class="col-sm-6 item-left">
                             <div class="banner-boder-zoom">
@@ -312,7 +311,7 @@
                             </div>
                         </div>
                     </div>
-                </div>*@
+                </div>
 
             }
         }
