--- a/04_Shop_multiProduct/assets/css/style.css
+++ b/04_Shop_multiProduct/assets/css/style.css
@@ -5213,3 +5213,6 @@ span.notify-right{
     color: #ccc;
 }
 .tree-menu>li .txt{padding:0 10px;}
+#AdsSlide2 .banner-boder-zoom{
+    margin:5px;
+}
