--- a/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/product/_productDetail.cshtml
@@ -121,8 +121,9 @@
                     <div id="product-detail" class="tab-panel active">
                         @Html.Raw(item.Detail)
                     </div>
-                    <div id="paymentDetail" lass="active">
-                        <div id='ajax_loader' style="left: 45%; top: 50%;">
+                    <div id="paymentDetail">
+
+                        <div id='ajax_loader' style="left: 45%; top: 50%;display:none;">
                             <img src="http://media.anpero.com/images/38/102017/loading2017102517124312.gif" />
                         </div>        
                     </div>
