--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -75,7 +75,7 @@
                                 </div>
                                 <div id="navbar" class="navbar-collapse collapse">
                                     <ul class="nav navbar-nav">
-                                        
+
                                         @if (commonInfo.MenuList != null)
                                         {
                                             for (int i = 0; i < commonInfo.MenuList.Length; i++)
@@ -83,32 +83,32 @@
                                                 if (commonInfo.MenuList[i].ChidMenu != null && commonInfo.MenuList[i].ChidMenu.Length > 0)
                                                 {
 
-                                                    <li class="dropdown">
-                                                        <a href="@commonInfo.MenuList[i].Link" data-toggle="dropdown">@commonInfo.MenuList[i].Tittle</a>
-                                                        <ul class="dropdown-menu container-fluid">
-                                                            <li class="block-container">
-                                                                <ul class="block">
-                                                                    @for (int j = 0; j < commonInfo.MenuList[i].ChidMenu.Length; j++)
+                                        <li class="dropdown">
+                                            <a href="@commonInfo.MenuList[i].Link" data-toggle="dropdown">@commonInfo.MenuList[i].Tittle</a>
+                                            <ul class="dropdown-menu container-fluid">
+                                                <li class="block-container">
+                                                    <ul class="block">
+                                                        @for (int j = 0; j < commonInfo.MenuList[i].ChidMenu.Length; j++)
 
                                                                     {
-                                                                        <li class="link_container"><a href="@commonInfo.MenuList[i].ChidMenu[j].Link">@commonInfo.MenuList[i].ChidMenu[j].Tittle</a></li>
+                                                                    <li class="link_container"><a href="@commonInfo.MenuList[i].ChidMenu[j].Link">@commonInfo.MenuList[i].ChidMenu[j].Tittle</a></li>
                                                                     }
-                                                                </ul>
-                                                            </li>
-                                                        </ul>
-                                                    </li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
                                                 }
                                                 else
                                                 {
-                                                    <li>
-                                                        <a href="@commonInfo.MenuList[i].Link">@commonInfo.MenuList[i].Tittle</a>
-                                                    </li>
+                                        <li>
+                                            <a href="@commonInfo.MenuList[i].Link">@commonInfo.MenuList[i].Tittle</a>
+                                        </li>
                                                 }
                                             }
                                         }
 
                                     </ul>
-                                   
+
                                 </div>
                             </div>
                         </nav>
@@ -127,8 +127,8 @@
     </div>
     @RenderBody()
     @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/bootstrap")
-        <script src="/Scripts/ShoppingCart.js"></script>
+    @Scripts.Render("~/bundles/bootstrap")
+    <script src="/Scripts/ShoppingCart.js"></script>
     @Html.Raw(commonInfo.AnperoPlugin)
     @RenderSection("scripts", required: false)
     @Html.Raw(commonInfo.PageScript)
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                 </li>
-             
+
                 <li class="col-xs-12 col-sm-6 col-md-4 services2-item">
                     <div class="service-wapper">
                         <div class="row">
@@ -181,8 +181,8 @@
                         </div>
                     </div>
                 </li>
-          
-            
+
+
 
             </ul>
         </div>
@@ -204,10 +204,10 @@
             </div>
         </div>
     </div>
-  
+
     <footer id="footer">
         <div class="container">
-           
+
 
             <div id="introduce-box" class="row">
                 <div class="col-md-4">
@@ -216,57 +216,57 @@
 
                         @*<a href="/"><img src="@commonInfo.Logo" alt="logo"></a>*@
                         @*<div class="adrct">
-                            <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address Công ty cổ phần Citygo số 434 trần khát Trân, Hai Bà </div>
-                            <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
+                                <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address Công ty cổ phần Citygo số 434 trần khát Trân, Hai Bà </div>
+                                <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
 
-                            @if (!string.IsNullOrEmpty(commonInfo.Email))
-                            {
-                                <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
-                            }
+                                @if (!string.IsNullOrEmpty(commonInfo.Email))
+                                {
+                                    <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
+                                }
 
-                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
-                            {
-                                <div class="tit-name">Skype:</div>
-                                <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
-                            }
+                                @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                {
+                                    <div class="tit-name">Skype:</div>
+                                    <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
+                                }
 
-                        </div>*@
+                            </div>*@
 
                         <div class="adrct">
                             <div class="tit-contain"><i class=""></i> Thái Nguyên</div>
                             <div class="tit-contain"><i class="fa fa-home"></i> CSSX chè Hùng Nhung</div>
                             <div class="tit-contain"><i class="fa fa-location-arrow"></i> xóm Nam Đồng, xã Tân Cương, TP Thái Nguyên</div>
-                          
+
                         </div>
 
                         <div class="adrct">
                             <div class="tit-contain"><i class=""></i> Hà Nội</div>
                             <div class="tit-contain"><i class="fa fa-home"></i> Đại lý Phượng Chili</div>
                             <div class="tit-contain"><i class="fa fa-location-arrow"></i> ngõ 35 Thái Thịnh, Hà Nội</div>
-                         
+
                         </div>
-                         @{
-                             
+                        @{
+
                              string thisUrl = System.Web.HttpContext.Current.Request.Url.ToString();
-                            <div class="introduce-title" style="margin-top:10px;">Chia sẻ với bạn bè</div>
-                            <div class="social-link">
-                                @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
+                        <div class="introduce-title" style="margin-top:10px;">Chia sẻ với bạn bè</div>
+                        <div class="social-link">
+                            @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                                 {
-                                    <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
+                                <a href="http://www.facebook.com/share.php?u=@commonInfo.FaceBookLink&title=@commonInfo.Desc" target="_blank"><i class="fa fa-facebook"></i></a>
                                 }
-                                @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
                                 {
-                                    <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
+                                <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
                                 }
-                                <a href="https://plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
-                                <a href="http://pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
-                                <a href="http://www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
-                            </div>
+                            <a href="https://plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
+                            <a href="http://pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
+                            <a href="http://www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
+                        </div>
                         }
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="row">                        
+                    <div class="row">
                         <div class="col-sm-12">
                             <div class="address-box" style="margin-top: 31px;">
 
@@ -275,66 +275,65 @@
                                     <div class="tit-contain"><i class=""></i> Bắc Kạn</div>
                                     <div class="tit-contain"><i class="fa fa-home"></i> Tạp hóa Tuyết Huân</div>
                                     <div class="tit-contain"><i class="fa fa-location-arrow"></i> số 33, tổ 11A, P Sông Cầu, Bắc Kạn</div>
-                                   
+
                                 </div>
 
                                 <div class="adrct">
                                     <div class="tit-contain"><i class=""></i> Ecopark</div>
                                     <div class="tit-contain"><i class="fa fa-home"></i> Đại lý Thu Dung</div>
                                     <div class="tit-contain"><i class="fa fa-location-arrow"></i> WBB 2617, West Bay, Ecopark</div>
-                                  
+
                                 </div>
-                             
-                                
+
+
                             </div>
                             @*<div class="introduce-list">
-                                @Html.Raw(commonInfo.Footer)
+                                    @Html.Raw(commonInfo.Footer)
 
-                            </div>*@
+                                </div>*@
                             @*@if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-                            {
-                                <ul id="introduce-company" class="introduce-list">
-                                    @foreach (var item in commonInfo.ProductCategoryList)
-                                    {
-                                        <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" alter="@item.Name">@item.Name</a></li>
-                                    }
-                                    
-                                </ul>
-                            }*@
+                                {
+                                    <ul id="introduce-company" class="introduce-list">
+                                        @foreach (var item in commonInfo.ProductCategoryList)
+                                        {
+                                            <li><a href="@Anpero.StringHelpper.GetParentCategoryLink(item.Name,item.Id)" alter="@item.Name">@item.Name</a></li>
+                                        }
+
+                                    </ul>
+                                }*@
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="col-md-4">
                     <div id="contact-box" style="text-align: right;">
                         @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
                         {
-                            <div class="fb-page" data-tabs="messages" data-href="@Html.Raw(commonInfo.FaceBookLink)" data-width="500" data-height="300" data-hide-cover="false"></div>
+                        <div class="fb-page" data-tabs="messages" data-href="@Html.Raw(commonInfo.FaceBookLink)" data-width="500" data-height="300" data-hide-cover="false"></div>
                         }
                     </div>
 
                 </div>
             </div>
 
-            <div id="footer-menu-box">                
+            <div id="footer-menu-box">
                 <div class="col-sm-12">
                     <ul class="footer-menu-list">
                         <li><a title="about" href="/about">Về chúng tôi</a></li>
                         <li><a href="/home/contact">Liên hệ</a></li>
-                        
+
                     </ul>
                 </div>
                 <div class="col-sm-12">
-                    <ul class="footer-menu-list">                            
-                            <li><a title="Chính sách vận chuyển" href="/shippolicy">Chính sách vận chuyển</a></li>
-                            <li><a title="Chính sách bảo hành" href="/WarrantyPolicy">Chính sách bảo hành</a></li>
-                            <li><a title="Chính sách đổi trả" href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
-                            <li><a title="Chính sách bảo mật" href="/PrivacyPolicy">Chính sách bảo mật</a></li>
-                            <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>                        
+                    <ul class="footer-menu-list">
+                        <li><a title="Chính sách vận chuyển" href="/shippolicy">Chính sách vận chuyển</a></li>
+                        <li><a title="Chính sách bảo hành" href="/WarrantyPolicy">Chính sách bảo hành</a></li>
+                        <li><a title="Chính sách đổi trả" href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
+                        <li><a title="Chính sách bảo mật" href="/PrivacyPolicy">Chính sách bảo mật</a></li>
+                        <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
                         <li><a href="/blog">Tin tức</a></li>
                     </ul>
                 </div>
-
                 <p class="text-center">Copyrights © 2017 @commonInfo.Name. All Rights Reserved. Designed by <a href="http://anpero.com" title="thiết kế web bán hàng anpero">Anpero.com</a></p>
             </div>
         </div>
@@ -351,6 +350,10 @@
         $(window).load(function () {
             Cart.bindCart();
         });
+        $(".tree-menu li span").mouseenter(function () {
+            $(this).closest('li').children('ul').show();
+        })
+     
     </script>
 </body>
 </html>
